really ogo chanbefgsjkhbl jksbviukweb rowb djwe

--- a/scorekeeper.ui
+++ b/scorekeeper.ui
@@ -49,10 +49,16 @@
         <string notr="true">font-size: 50pt</string>
        </property>
        <property name="text">
-        <string>Left</string>
+        <string/>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -68,7 +74,7 @@
         <string notr="true">font-size: 50pt; font-weight: bold</string>
        </property>
        <property name="text">
-        <string>00</string>
+        <string>0</string>
        </property>
        <property name="textFormat">
         <enum>Qt::AutoText</enum>
@@ -107,7 +113,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>-1</string>
+            <string>0</string>
            </property>
           </widget>
          </item>
@@ -120,7 +126,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>+1</string>
+            <string>0</string>
            </property>
           </widget>
          </item>
@@ -133,7 +139,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>+3</string>
+            <string>0</string>
            </property>
           </widget>
          </item>
@@ -204,10 +210,16 @@
         <string notr="true">font-size: 50pt</string>
        </property>
        <property name="text">
-        <string>Left</string>
+        <string/>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -223,7 +235,7 @@
         <string notr="true">font-size: 50pt; font-weight: bold</string>
        </property>
        <property name="text">
-        <string>00</string>
+        <string>0</string>
        </property>
        <property name="textFormat">
         <enum>Qt::AutoText</enum>
@@ -262,7 +274,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>-1</string>
+            <string>0</string>
            </property>
           </widget>
          </item>
@@ -275,7 +287,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>+1</string>
+            <string>0</string>
            </property>
           </widget>
          </item>
@@ -288,7 +300,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>+3</string>
+            <string>0</string>
            </property>
           </widget>
          </item>
@@ -324,7 +336,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>280</x>
@@ -333,22 +345,61 @@
       <height>511</height>
      </rect>
     </property>
-    <layout class="QGridLayout" name="layout_timer" rowstretch="0,0,0,0">
+    <layout class="QGridLayout" name="layouy_middle">
+     <item row="0" column="0">
+      <spacer name="spacer_timer_top">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>108</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
      <item row="1" column="0">
-      <widget class="QLCDNumber" name="lcd_timer">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="digitCount">
-        <number>4</number>
-       </property>
-       <property name="intValue" stdset="0">
-        <number>1134</number>
-       </property>
-      </widget>
+      <layout class="QGridLayout" name="layout_timer">
+       <item row="0" column="0">
+        <widget class="QLCDNumber" name="lcd_timer_minutes">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="smallDecimalPoint">
+          <bool>false</bool>
+         </property>
+         <property name="digitCount">
+          <number>2</number>
+         </property>
+         <property name="intValue" stdset="0">
+          <number>0</number>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLCDNumber" name="lcd_timer_seconds">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="smallDecimalPoint">
+          <bool>false</bool>
+         </property>
+         <property name="digitCount">
+          <number>2</number>
+         </property>
+         <property name="intValue" stdset="0">
+          <number>0</number>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item row="2" column="0">
       <widget class="QPushButton" name="button_startstop">
@@ -363,19 +414,6 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <spacer name="spacer_timer_top">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
      <item row="3" column="0">
       <spacer name="spacer_timer_bottom">
        <property name="orientation">
@@ -384,7 +422,7 @@
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
-         <height>40</height>
+         <height>138</height>
         </size>
        </property>
       </spacer>
@@ -402,20 +440,28 @@
     </rect>
    </property>
    <property name="nativeMenuBar">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <widget class="QMenu" name="menu_main">
     <property name="title">
-     <string>File</string>
+     <string>Actions</string>
     </property>
     <addaction name="action_undo"/>
-    <addaction name="separator"/>
-    <addaction name="action_configure"/>
     <addaction name="separator"/>
     <addaction name="action_reset"/>
     <addaction name="action_quit"/>
    </widget>
+   <widget class="QMenu" name="menuConfiguration">
+    <property name="title">
+     <string>Configuration</string>
+    </property>
+    <addaction name="action_configure"/>
+    <addaction name="separator"/>
+    <addaction name="action_import"/>
+    <addaction name="action_export"/>
+   </widget>
    <addaction name="menu_main"/>
+   <addaction name="menuConfiguration"/>
   </widget>
   <action name="action_undo">
    <property name="text">
@@ -429,16 +475,10 @@
    <property name="text">
     <string>Configure...</string>
    </property>
-   <property name="shortcut">
-    <string>F10</string>
-   </property>
   </action>
   <action name="action_quit">
    <property name="text">
     <string>Quit</string>
-   </property>
-   <property name="shortcut">
-    <string>Esc</string>
    </property>
   </action>
   <action name="action_reset">
@@ -447,6 +487,16 @@
    </property>
    <property name="shortcut">
     <string>F2</string>
+   </property>
+  </action>
+  <action name="action_import">
+   <property name="text">
+    <string>Import...</string>
+   </property>
+  </action>
+  <action name="action_export">
+   <property name="text">
+    <string>Export...</string>
    </property>
   </action>
  </widget>
